--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,10 @@ dependencies {
     //ButterKnife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    def version = "1.1.1"
+    implementation "android.arch.lifecycle:extensions:${version}"
+    implementation "android.arch.persistence.room:runtime:${version}"
+    annotationProcessor "android.arch.lifecycle:compiler:${version}"
+    annotationProcessor "android.arch.persistence.room:compiler:${version}"
 }
