--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:28.0.0-alpha3'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.jetradarmobile.desertplaceholder:desertplaceholder:1.2.4'
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
     testImplementation 'junit:junit:4.12'
