--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
@@ -31,10 +31,10 @@ dependencies {
     //ButterKnife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     def version = "1.1.1"
     implementation "android.arch.lifecycle:extensions:${version}"
     implementation "android.arch.persistence.room:runtime:${version}"
     annotationProcessor "android.arch.lifecycle:compiler:${version}"
     annotationProcessor "android.arch.persistence.room:compiler:${version}"
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
